--- a/index.html
+++ b/index.html
@@ -82,9 +82,7 @@
             margin: 50px auto;
             padding: 20px;
             font-size: 20px;
-            background-image: url('tile2.png');
-            background-size: cover;
-            background-position: center; /* 背景画像を中央に配置 */
+            background-color: rgb(159, 218, 249);
             color: black;
             border: 6px solid blue;
             border-radius: 32px;
