--- a/index.html
+++ b/index.html
@@ -47,10 +47,13 @@
         font-size: 20px; /* 見出しサイズを小さく */
             }
         }
+
         body {
             font-family: Arial, sans-serif;
             text-align: center;
             background-image: url('aikura.png'); /* 画像パス */
+            background-size: 50% auto; /* 横幅いっぱい、高さは自動調整 */
+            background-attachment: fixed;
             margin: 0;
             padding: 0;
         }
