--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>アイクラクイズ</title>
     <link href="https://fonts.googleapis.com/earlyaccess/nicomoji.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c" rel="stylesheet">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 
     <style>
         @media (max-width: 600px) {
