--- a/index.html
+++ b/index.html
@@ -55,18 +55,18 @@
     </div>
     <nav>
         <ul class="nav-links">
-            <li><a href="quiz/index.html">アイクラクイズ</a></li>
+            <li><a href="quiz/quiz.html">アイクラクイズ</a></li>
             <li><a href="combo/combo.html">即死コンボドリル</a></li>
             <li><a href="#">切り離しアドバイス</a></li>
             <li><a href="gomquiz/gom.html">100均ゴムゲーム</a></li>
-            <li><a href="home.html">ホーム</a></li>
+            <li><a href="index.html">ホーム</a></li>
         </ul>
     </nav>
 </header>
     <div id="quiz-container"><b>
         <span class="large">ここはアイクラを愛し、アイクラに愛されるクライマーによるサイト<br>
         好きな項目を選んでね<br><br></span>
-        <a href="quiz/index.html">アイクラクイズ</a><br>
+        <a href="quiz/quiz.html">アイクラクイズ</a><br>
         10問のアイクラにまつわるクイズに挑戦！きみは何問解けるかな？<br><br>
         <a href="combo/combo.html">即死コンボドリル</a><br>
         様々なコンボルートが表示されるからトレモでできるか挑戦だ！<br><br>
