--- a/combo/combo.html
+++ b/combo/combo.html
@@ -129,11 +129,11 @@
     </div>
     <nav>
         <ul class="nav-links">
-            <li><a href="../quiz/index.html">アイクラクイズ</a></li>
+            <li><a href="../quiz/quiz.html">アイクラクイズ</a></li>
             <li><a href="combo.html">即死コンボドリル</a></li>
             <li><a href="#">切り離しアドバイス</a></li>
             <li><a href="#">100均ゴムゲーム</a></li>
-            <li><a href="../home.html">ホーム</a></li>
+            <li><a href="../index.html">ホーム</a></li>
         </ul>
     </nav>
 </header>
